--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Email-ARF-Hotmail
-version:            0.04
+version:            0.05
 abstract:           Perl extension for Hotmail Abuse reports
 author:
     - Michael Stevens <mstevens@etla.org
@@ -11,9 +11,10 @@ configure_requires:
 build_requires:
     ExtUtils::MakeMaker:  0
 requires:
-    Email::ARF:   0.005
-    Email::MIME:  1.903
-    Test::More:   0.94
+    Email::ARF:      0.005
+    Email::MIME:     1.903
+    Regexp::Common:  2.122
+    Test::More:      0.94
 no_index:
     directory:
         - t
