--- a/META.yml
+++ b/META.yml
@@ -1,25 +1,25 @@
---- #YAML:1.0
-name:               Email-ARF-Hotmail
-version:            0.08
-abstract:           Perl extension for Hotmail Abuse reports
+---
+abstract: 'Perl extension for Hotmail Abuse reports'
 author:
-    - Michael Stevens <mstevens@etla.org
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Michael Stevens <mstevens@etla.org'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Email::ARF:      0.005
-    Email::MIME:     1.903
-    Regexp::Common:  2.122
-    Test::More:      0.94
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.55_02
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Email-ARF-Hotmail
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Email::ARF: 0.005
+  Email::MIME: 1.903
+  Regexp::Common: 2.122
+  Test::More: 0.94
+version: 0.09
